[jdk] Prefer using wrapper objects instead of newing